# fizzbuzz

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
src/: builder.rs  default.rs  default_builder.rs  default_input.rs  default_output.rs  domain.rs  fizzbuzzable.rs  iter.rs  lib.rs  main.rs  range.rs  rule.rs  traits.rs
src/builder/: error.rs  mod.rs
src/traits/: builder.rs  domain.rs  fizzbuzzable.rs  fizzbuzzed.rs  mod.rs  range.rs
