[package]
name = "fizzbuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["signed_input", "signed_output", "unsigned_input", "unsigned_output"]
signed_input = []
signed_output = []
unsigned_input = []
unsigned_output = []

[dependencies]
